--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 
-<body>
+<body style="margin: 0;">
     <div style="display: block; height: 100vh;">
         <object><embed src="/static/resume_2025.public.pdf" width="100%" height="100%" type="application/pdf"></object>
     </div>
